fix: tweak row-gap in passenger-details

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@
     margin-bottom: -25px;
 }
 
+.passenger-details {
+    row-gap: 12px;
+}
+
 @keyframes invalid-shake {
     0% {
         transform: translateX(0)
